--- a/Flashcard 2b/style.css
+++ b/Flashcard 2b/style.css
@@ -1,5 +1,13 @@
+:root{
+    --texto-principal: cyan;
+    --texto-pergunta: #00FF00;
+    --texto-resposta: #006400;
+}
+
 body {
-    background-color: bisque;
+    background: url('plano\ bob\ esponja.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
     font-family: Bai Jamjuree;
 }
 
@@ -9,26 +17,40 @@ body {
 
 .cartao{
     margin: 1rem 1rem;
-    background-color: orange;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
+    
 }
 
 .cartao__conteudo{
     text-align: center;
-    background-color: gold;
+    border: 1px solid var(--texto-principal);
     height: 100%;
 }
 
 .cartao__conteudo h3{
-    background-color: yellow;
+    color: var(--texto-principal);
+    border: 1px solid var(--texto-principal);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+}
+
+.cartao__conteudo__pergunta p{
+    color: var(--texto-pergunta);
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.cartao__conteudo__resposta p{
+    color: var(--texto-resposta);
+    font-weight: 900;
+    font-size: 24px;
+    padding-top: 1em;
 }
 
 footer {
