--- a/Flashcard 2b/style.css
+++ b/Flashcard 2b/style.css
@@ -7,12 +7,16 @@
 body {
     background: url('plano\ bob\ esponja.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100vw;
     font-family: Bai Jamjuree;
 }
 
 #container{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 3rem;
+    padding: 4rem;
 }
 
 .cartao{
@@ -20,13 +24,16 @@ body {
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
-    
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .cartao__conteudo{
     text-align: center;
     border: 1px solid var(--texto-principal);
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
+    
 }
 
 .cartao__conteudo h3{
@@ -38,12 +45,14 @@ body {
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
 
 .cartao__conteudo__pergunta p{
     color: var(--texto-pergunta);
     font-weight: 600;
     font-size: 20px;
+    margin-top: 4rem;
 }
 
 .cartao__conteudo__resposta p{
@@ -51,6 +60,21 @@ body {
     font-weight: 900;
     font-size: 24px;
     padding-top: 1em;
+}
+
+.cartao:hover .cartao__conteudo {
+    transform: rotateY(180deg);
+}
+
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta{
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
 }
 
 footer {
